--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
+<!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <title> Simple Interest Calculator </title>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            <h1> Simple Interest Calculator</h1>
+            <div class="maincontent">
+                Amount  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<input type="number" id="principal">  <br /> <br />
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+                Interest Rate &nbsp <input type="range" id="interest" min="1" max="20" step="0.25" value="10.25" onchange="updateText(this.value)" />
+                <span id="rate"> 10.25 </span> % <br><br />
 
-        <button onclick="compute()">Compute</button>
+
+                <label for="time"> No. of Years &nbsp</label>
+                <select name="time" id="years">
+                    <option value="1"> 1</option>
+                    <option value="2"> 2</option>
+                    <option value="3"> 3</option>
+                    <option value="4"> 4</option>
+                    <option value="5"> 5</option>
+                    <option value="6"> 6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9"> 9</option>
+                    <option value="10"> 10</option>
+
+                </select> <br /><br /><br />
+
+                <button onclick="compute()">Compute Interest</button> <br /><br />
+                <span id="result"><br /></span> <br>
+            </div>
+
+        </div>
+
+        <div class="footer"><footer> &#169 2021 Everyone Can Get Rich. </footer></div>
+        
     </body>
 </html>
