added reset button. final submission

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
                 <button onclick="compute()">Compute Interest</button> <br /><br />
                 <span id="result"><br /></span> <br>
+
             </div>
+            <button onclick="reset()">Reset</button> <br /><br />
 
         </div>
 
